--- a/PIMS_Prototype/content/about.html
+++ b/PIMS_Prototype/content/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/google_fonts.css" />
     <link rel="stylesheet" href="../styles/bootstrap.min.css" />
     <link rel="stylesheet" href="../styles/PIMS_Prototype_navbar.css" />
-    <link rel="stylesheet" href="../styles/PIMS_Prototype2.css"/>
+    <link rel="stylesheet" href="../styles/PIMS_Prototype.css"/><link rel="stylesheet" href="../styles/ViewStyles.css" /> <link rel="stylesheet" href="../styles/Site.css" />
     <link rel="stylesheet" href="../styles/font-awesome.min.css"/>
     <script src="../scripts/jquery-3.2.1.js"></script>
     <script src="../scripts/bootstrap.min.js"></script>
@@ -20,6 +20,7 @@
         });</script>
 </head>
 
+<span id="menu"></span>
 <span id="menu"></span>
 
 <body class="manpage">
