--- a/PIMS_Prototype/content/getting_started/git_for_windows.html
+++ b/PIMS_Prototype/content/getting_started/git_for_windows.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="../../styles/google_fonts.css">
     <link rel="stylesheet" href="../../styles/bootstrap.min.css" />
     <link rel="stylesheet" href="../../styles/PIMS_Prototype_navbar.css" />
-    <link rel="stylesheet" href="../../styles/PIMS_Prototype2.css"/>
+    <link rel="stylesheet" href="../../styles/PIMS_Prototype.css"/>
     <link rel="stylesheet" href="../../styles/font-awesome.min.css"/>
     <script src="../../scripts/jquery-3.2.1.js"> </script>
     <script src="../../scripts/bootstrap.min.js"> </script>
