put in asterisk when field is required.

--- a/PIMS_Prototype/content/MaintainMember.html
+++ b/PIMS_Prototype/content/MaintainMember.html
@@ -39,9 +39,9 @@
 
             <table ID="tblMemberInformation" class="tableMaintain">
 
-                <tr><td>First Name</td><td>*</td><td><input id="FirstName" type="text" value="" class="isEdittable isSmallField isRequired"></td></tr>
+                <tr><td>First Name</td><td></td><td><input id="FirstName" type="text" value="" class="isEdittable isSmallField isRequired"></td></tr>
                 <tr><td>Middle Name</td><td></td><td><input id="MiddleName" type="text" value="" class="isEdittable isSmallField"></td></tr>
-                <tr><td>Last Name</td><td>*</td><td><textarea id="LastName" type="text" value="" class="isEdittable isLargeField"> </textarea></td></tr>
+                <tr><td>Last Name</td><td></td><td><input id="LastName" type="text" value="" class="isEdittable isSmallField isRequired"> </td></tr>
 
             </table>
         </fieldset>
@@ -51,8 +51,8 @@
 
             <table ID="tblAddress" class="tableMaintain">
 
-                <tr><td>First Name</td><td>*</td><td><input id="FirstName" type="text" value="" class="isEdittable isSmallField"></td></tr>
-                <tr><td>Living Facility Name</td><td>*</td><td><textarea id="LivingFacilityName" type="text" value="" class="isEdittable isLargeField"> </textarea></td></tr>
+                <tr><td>First Name</td><td></td><td><input id="FirstName" type="text" value="" class="isEdittable isSmallField"></td></tr>
+                <tr><td>Living Facility Name</td><td></td><td><textarea id="LivingFacilityName" type="text" value="" class="isEdittable isLargeField"> </textarea></td></tr>
 
             </table>
         </fieldset>
